# revenar-lang

./: BUILD.md  CMakeLists.txt  LICENSE
examples/: arrays_dynamic.rv  arrays_static.rv  bool.rvn  char.rvn  control_flow.rv  do_while.rv  do_while_loop.rvn  dynamic_array.rvn  float.rvn  for-in-loop.rvn  for_in_loop.rvn  for_loop.rvn  function.rvn  functions.rv  if-else.rvn  if_else.rvn  integer.rvn  loop.rvn  match.rvn  mutability.rvn  print.rvn  static_array.rvn  string.rvn  ternary.rvn  unsigned_integer.rvn  variables.rv  while-loop.rvn  while_loop.rvn
interpreter/: CMakeLists.txt
interpreter/common/: CMakeLists.txt  token.h
interpreter/evaluator/: CMakeLists.txt
interpreter/lexer/: CMakeLists.txt  lexer.c  lexer.h
interpreter/parser/: CMakeLists.txt  statement.c
shared/lexer/: lexer.c  lexer.h
